# SBA

./: .flake8  .gitignore  .mypy.ini  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  House.py  NOTICE  README.md  REPORT.md  SECURITY.md  __easter_egg.py  __init__.py  __main__.py  _config.yml  accounts.toml  admin.py  colour.py  common.py  directory_tree.txt  house.py  login.py  pyproject.toml  requirements_dev.txt  saveAndLoad.py  seatstatus.py  self_evaluation.md  setup.cfg  setup.py  tox.ini  user.py  utils.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  __easter_egg.py
.github/workflows/: build-jekyll.yml  tests.yml
_includes/: head-custom.html
codedocs/src/: index.html
codedocs/src/SBA/: admin.html  colour.html  coorutils.html  house.html  index.html  language.html  login.html  main.html  user.html  utils.html
data/: README.md  accounts.toml
docs/: adminSeatOperation.md  colour.md  controlPanel.md  dataStorage.md  house.md  houses.md  language.md  login.md  logs.md  seatStatusOverride.md  ticket.md  userBuySeat.md  userQuickStart.md
logs/: README.md
report/: Problem_Analysis.md  REPORT.md  acknowledgement.md  self_evaluation.md
src/: admin.py  colour.py  coorutils.py  house.py  login.py  user.py  utils.py
src/SBA/: __init__.py  admin.py  colour.py  coorutils.py  house.py  language.py  login.py  main.py  user.py  utils.py
src/SBA/html/SBA/: admin.html  colour.html  coorutils.html  house.html  index.html  language.html  login.html  main.html  user.html  utils.html
tests/: __init__.py  test_coorutils.py  test_house.py
