[metadata]
name = SBA
version = 4.1
description = A cinema kiosk system
author = Joe Chau
license = Apache-2.0
license_file = LICENSE
platforms = win32
classifiers =
    Environment :: Win32 (MS Windows)
    Framework :: Flake8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = SBA
python_requires = >= 3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=6.1.0
    tox>=4.10.0
    pytest>=7.4.0
    pytest-cov>=4.1.0

