[metadata]
name = SBA
version = 5.1
description = A cinema kiosk system
author = Joe Chau
license = Apache-2.0
license_file = LICENSE
platforms = win32
classifiers =
    Environment :: Win32 (MS Windows)
    Framework :: Flake8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = SBA
python_requires = >= 3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=6.1.0
    tox>=4.10.0
    pytest>=7.4.0
    pytest-cov>=4.1.0
    mypy>=1.5.1

[options.package_data]
SBA = py.typed

# I only want to test src/SBA/coorutils.py
# others are mainly related to user input and is very difficult to test
[coverage:run]
omit =
    __*.py
    setup.py
    src/SBA/admin.py
    src/SBA/colour.py
    src/SBA/house.py
    src/SBA/login.py
    src/SBA/main.py
    src/SBA/user.py
    src/SBA/utils.py
    tests/__*.py